Finalizando testes de integração, fazendo alterações de classes em pastas e renomeando alguns testes